--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 :root{
     font-size: 60%;
 }
 *{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins',Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,7 +12,7 @@
 body{
     width: 100vw;
     height: 100vh;
-    background: #40444b;
+    background: #40444b
 }
 .text{
     width: 95vw;
@@ -51,7 +51,7 @@ body{
     border-radius: 40px 0 0 40px;
     border: none;
     padding: 25px;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     text-transform: lowercase;
     font-weight: bold;
     color: #7a7a7a;
@@ -79,15 +79,13 @@ body{
     background: #69696948;
 }
 .bot{
-    color: #000;
-    background: #fff;
+    color: #ffffff;
+    font-weight: 500;
+    background: #274d33;
     border-radius: 10px;
-    font-weight: bold;
     width: 220px;
     height: auto;
     display: none;
-    align-items: center;
-    justify-self: center;
     margin: 10px 0;
     padding: 10px;
     font-size: 1.4rem;
