--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,15 +12,17 @@
 body{
     width: 100vw;
     height: 100vh;
+    transition: background 1.5s;
     background: #40444b;
     overflow-x: hidden;
 }
 .text{
     width: 95vw;
-    height: 70vh;
+    height: 88vh;
     display: flex;
     flex-direction: column;
     margin-left: 10vw;
+    overflow-y: scroll;
     margin-right: 10vw;
 }
 .footer{
@@ -28,6 +30,7 @@ body{
     display: flex;
     justify-content: center;
     background: #202329c2;
+    transition: background 1.5s;
     position: fixed;
     align-items: center;
     bottom: 0;
@@ -41,6 +44,7 @@ body{
     min-width: 300px;
     position: fixed;
     height: 50px;
+    transition: background 1.5s;
     background: #40444b;
     border: none;
     border-radius: 40px;
@@ -50,6 +54,7 @@ body{
     min-width: 5rem;
     height: 100%;
     background: #40444b;
+    transition: background 1.5s;
     border-radius: 40px 0 0 40px;
     border: none;
     padding: 25px;
@@ -83,7 +88,7 @@ body{
 .bot{
     color: #ffffff;
     font-weight: 500;
-    background: #274d33;
+    background: #216d39c4;
     border-radius: 10px;
     width: 220px;
     height: auto;
