--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -102,7 +102,7 @@ body{
     font-weight: bold;
     background: #ffffff;
     border-radius: 10px;
-    width: 220px;
+    width: 20rem;
     height: auto;
     display: none;
     margin: 5px 0;
