finalizando refatoracao do codigo

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -90,7 +90,7 @@ body{
     font-weight: 500;
     background: #216d39c4;
     border-radius: 10px;
-    width: 220px;
+    width: 20rem;
     height: auto;
     display: none;
     margin: 5px 0;
