--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,12 +12,12 @@
 body{
     width: 100vw;
     height: 100vh;
-    background: #40444b;
+    background: var(--body-background);
     overflow: hidden;
 }
 .text{
     width: 95vw;
-    height: 88vh;
+    height: 85vh;
     display: flex;
     flex-direction: column;
     margin-left: 10vw;
@@ -28,7 +28,7 @@ body{
     width: 100%;
     display: flex;
     justify-content: center;
-    background: #202329c2;
+    background: var(--footer-background);
     position: fixed;
     align-items: center;
     bottom: 0;
@@ -40,9 +40,9 @@ body{
     min-width: 10vw;
     width: 44vw;
     min-width: 300px;
+    background: var(--input-background);
     position: fixed;
     height: 50px;
-    background: #40444b;
     border: none;
     border-radius: 40px;
 }
@@ -50,7 +50,7 @@ body{
     width: 100rem;
     min-width: 10rem;
     height: 100%;
-    background: #40444b;
+    background: var(--input-background);
     border-radius: 40px 0 0 40px;
     border: none;
     padding: 25px;
@@ -108,9 +108,4 @@ body{
 }
 .view{
     display: flex;
-}
-@media (max-width: 340px){
-    .input{
-        min-width: 2rem;
-    }
 }
